# skylake

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: install_dependencies.sh  run_cs2.sh
skylake/: hetzner.py
