[tool.poetry]
name = "skylake"
version = "0.1.0"
description = ""
authors = ["GOATS2K <jp@glattetre.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
hcloud = "^1.29.1"
python-a2s = "^1.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
